# VelvaProgrammingLanguage

./: .gitignore  AST.cpp  CMakeCache.txt  CMakeLists.txt  Lexer.cpp  Makefile  OpenCLResult.c  README.md  TutorialCode.cpp  cmake_pre.sh  compile_commands.json  main.cpp  test.cpp
HelloWorld/: main.cpp
KaleidoscopeTutorial/: .gitignore  AST.cpp  AST.hpp  CMakeLists.txt  Parser.cpp  main.cpp
NN/: a.out  main.ll  main.s  main.vld
TreeSitterSetup/bindings/rust/: lib.rs
TreeSitterSetup/test/: everything.txt  ifelse.txt  while.txt
VelvaProgrammingLanguage/: .gitignore  CMakeLists.txt  Doxyfile  README.md  doxyStyle.css  list_files.sh  test.vld
VelvaProgrammingLanguage/TreeSitterSetup/: README.md  binding.gyp  grammar.js  package-lock.json
VelvaProgrammingLanguage/TreeSitterSetup/bindings/node/: binding.cc  index.js
VelvaProgrammingLanguage/TreeSitterSetup/src/: grammar.json  node-types.json  parser.c
VelvaProgrammingLanguage/TreeSitterSetup/test/: conditionals.txt  everything.txt  for.txt  string.txt  while.txt
VelvaProgrammingLanguage/example/: KaleidoScopeEight.cpp
VelvaProgrammingLanguage/include/: AST.hpp  KaleidoscopeJIT.hpp  Lexer.hpp  Parser.hpp  TestRunner.hpp  Token.hpp  Token2.hpp  TreeSitterCursor.hpp  TreeSitterParser.hpp  Utils.hpp  functions.hpp
VelvaProgrammingLanguage/src/AST/: AST.cpp  ASTConstructors.cpp  ASTDebug.cpp  ASTReturnType.cpp  BlockExpr.cpp  IntExprAST.cpp  Utils.cpp
VelvaProgrammingLanguage/src/Driver/: TSDriver.cpp  TestVLD.cpp  compiler.cpp
VelvaProgrammingLanguage/src/IRGen/: BinaryOpIRGen.cpp  BlockIrGen.cpp  CompilationContext.cpp  LoopIrGen.cpp  TreeSitterIRGen.cpp  VariableDeclarations.cpp  VariableIrGen.cpp
VelvaProgrammingLanguage/src/Lexer/: Lexer.cpp  Token.cpp
VelvaProgrammingLanguage/src/Parser/: MainParser.cpp  ParseAssign.cpp  ParseBranch.cpp  ParseCallFunc.cpp  ParseDeclareFunctionExpr.cpp  ParseExpression.cpp  ParseGeneral.cpp  ParseLoop.cpp  ParsePrimary.cpp  ParseString.cpp  ParseVarDecl.cpp  ParserInit.cpp  PrintDeclaration.cpp  VariableDeclaration.cpp  VariableParser.cpp
VelvaProgrammingLanguage/src/TreeSitterParser/: MainParser.cpp  ParseBlock.cpp  ParseExpression.cpp  ParseFunctionDeclare.cpp  ParseIfStatement.cpp  ParseLoop.cpp  ParserInit.cpp  TreeSitterCursor.cpp  VariableDecl.cpp
VelvaProgrammingLanguage/tests/: IfStatements.vld  TestMain.cpp  TestRunner.hpp  TestVLD.cpp  auto.vld  basic_test.vld  inferiorFor.vld  printf.vld  put.vld  strings.vld  test.vld  while_test.vld
VelvaProgrammingLanguage/tree-sitter-velva/: grammar.js  package.json
VelvaProgrammingLanguage/tree-sitter-velva/test/: func.txt  ifelse.txt
include/: AST.hpp  CompilationContext.hpp  Functions.hpp  Scope.hpp  String.hpp  TreeSitterCursor.hpp  TreeSitterParser.hpp  Utils.hpp
src/AST/: AST.cpp  ASTDebug.cpp  ASTReturnType.cpp  FFIFunc.cpp
src/Driver/: compiler.cpp
src/IRGen/: BinaryOpIRGen.cpp  BlockIrGen.cpp  ClassIrGen.cpp  CompilationContext.cpp  ConditionalIR.cpp  FunctionCallIR.cpp  FunctionsIR.cpp  LoopIrGen.cpp  OpenCLGen.cpp  Scope.cpp  StringIRHelper.cpp  VariableIrGen.cpp
src/Parser/: MainParser.cpp  ParseClass.cpp  ParseExpression.cpp  ParseFunctionDeclare.cpp  ParseIfStatement.cpp  ParseParanTern.cpp  ParsePointer.cpp  ParseReturn.cpp  ParserInit.cpp  TreeSitterCursor.cpp  VariableDecl.cpp
src/TreeSitter/: Cargo.toml  grammar.js  package.json
src/TreeSitter/bindings/node/: binding.cc
src/TreeSitter/src/: grammar.json  node-types.json  parser.c
src/TreeSitter/test/: binaryexp.txt  vartest.txt
tests/: Arrays.vld  Assign.vld  Auto.vld  Boolean.vld  Class&Function.vld  Class.vld  ClassExtra.vld  ClassInClass.vld  ClassTest.vld  ForLoop.vld  FunctionArgument.vld  FunctionTest.vld  IfStatements.vld  MultipleConditions.vld  OpenCLtest.vld  PointerDouble.vld  Printf.vld  Scoping.vld  Strings.vld  Ternary.vld  WhileLoop.vld  a.out  main.ll  main.s  test.vld
